# custody-protocol

./:  .travis.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  main.cpp
cmake/: grpc_generator.cmake
nodes/api/: publisher.proto
nodes/publisher/: CMakeLists.txt  main.cpp  testclient.cc
nodes/publisher/server/: node_server.cpp  node_server.hpp
